--- a/src/themes/rootTheme.css
+++ b/src/themes/rootTheme.css
@@ -5,7 +5,7 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;1,300;1,400;1,500&display=swap");
 
-/* @import url('https://fonts.googleapis.com/css?family=Bai+Jamjuree:300,400,500,600&display=swap'); */
+@import url("https://fonts.googleapis.com/css?family=Anonymous+Pro|Open+Sans&display=swap");
 
 @import url("https://fonts.googleapis.com/css2?family=Sarabun:wght@500&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700&display=swap");
@@ -54,10 +54,10 @@
     --theme-transition: font-size 0.25s var(--ease-in-out-quad), background 0.25s var(--ease-in-out-quad),
         color 0.25s var(--ease-in-out-quad);
     /* Font Family */
-    --font-family-inter: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial,
+    --font-family-inter: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial,
         "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-family-body: var(--font-family-inter);
-    --font-family-heading: "Sarabun", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial,
+    --font-family-heading: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial,
         "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     /* Font Family */
     --paragraph-margin-bottom: 1.2rem;
