add dynamic headline

--- a/src/themes/rootTheme.css
+++ b/src/themes/rootTheme.css
@@ -93,6 +93,7 @@ body.light {
     --background-default: #ffffff;
     --text-heading: #222;
     --textNormal: #222;
+    --header-bg-highlight: #C3F8FF;
     /* Color */
     --colors-border: hsla(var(--palette-gray-70), 10%); 
     --colors-logo: hsla(var(--palette-blue-70), 100%);
@@ -138,6 +139,8 @@ body.dark {
     --background-default: #1a202c;
     --text-heading: #fafafa;
     --textNormal: #fafafa;
+    --header-bg-highlight: #16363B;
+
     --colors-border: hsla(var(--palette-gray-70), 100%); 
     --colors-logo: hsla(var(--palette-blue-30), 100%);
     --colors-brand: hsla(var(--palette-blue-40), 100%);
